[gd_scene load_steps=5 format=3 uid="uid://qw0ttkiidgpl"]

[ext_resource type="Script" uid="uid://dtrgma0y8a2sq" path="res://scenes/menu.gd" id="1_ouk20"]
[ext_resource type="FontFile" uid="uid://cpjy8xrn06dk0" path="res://assets/pixel_font.ttf" id="2_mae5d"]
[ext_resource type="PackedScene" uid="uid://dnavnf7u8pp3o" path="res://scenes/option_menu.tscn" id="3_con2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouk20"]
bg_color = Color(0.0509804, 0, 0.129412, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouk20")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouk20")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -68.0
offset_right = 150.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Play" type="Button" parent="MarginContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mae5d")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mae5d")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mae5d")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 122.0
offset_right = 100.0
offset_bottom = 172.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 50
text = "PONG"

[node name="Option" type="CanvasLayer" parent="."]

[node name="OptionMenu" parent="Option" instance=ExtResource("3_con2f")]

[connection signal="pressed" from="MarginContainer/MainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/Quit" to="." method="_on_quit_pressed"]
